# SafeBench

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  developer_guidance.md  requirements.txt  run_bash.sh  run_docker.sh  setup.py
Docs/source/: API.md  index.rst  installation.md
docker/: Dockerfile  README.md  requirements.txt  run_docker.sh  sensor.py  xorg.conf
docs/: requirements.txt
docs/source/: components.md  conf.py  index.rst  installation.md  instruction.md  introduction.md  main_files.md  reference.md  run_example.md  self_defined_agent.md  self_defined_scenario.md  submission.md  tracks.md
gym_carla/: __init__.py
gym_carla/envs/: carla_env.py  carla_env_2.py  route_planner.py
log/eval_results/: results.pkl
pkgs/evaluation/: evaluate_results.py
planning/: carla_runner.py  carla_runner_2.py  env_wrapper.py  env_wrapper_2.py  plot.py  requirement.txt  run.py
red_team.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
safebench/: buffer.py  carla_runner.py  carla_runner_2.py  scenic_runner.py
scripts/: run.py  start_carlaviz.sh  test_env.py
src/: requirements.txt  run.sh
src/evaluation/scenario_node/: CMakeLists.txt  package.xml
src/evaluation/scenario_node/data/: dev.json
src/evaluation/scenario_node/launch/: scenario_node.launch
src/evaluation/scenario_node/models/advtraj/1/: 1.json
src/evaluation/scenario_node/models/advtraj/3/: 0.json  1.json
src/evaluation/scenario_node/models/advtraj/4/: 1.json
src/evaluation/scenario_node/models/lc/2/: 0.pth
src/evaluation/scenario_node/models/lc/4/: 0.pth
src/evaluation/scenario_node/models/lc/5/: 1.pth
src/evaluation/scenario_node/models/lc/7/: 0.pth
src/evaluation/scenario_node/route/scenario_02_routes/: scenario_02_route_01.xml  scenario_02_route_09.xml
src/evaluation/scenario_node/route/scenario_03_routes/: scenario_03_route_04.xml
src/evaluation/scenario_node/route/scenario_04_routes/: scenario_04_route_02.xml  scenario_04_route_09.xml
src/evaluation/scenario_node/route/scenario_05_routes/: scenario_05_route_02.xml  scenario_05_route_06.xml
src/evaluation/scenario_node/route/scenario_08_routes/: scenario_08_route_07.xml
src/evaluation/scenario_node/route/scenarios/: scenario_02.json  scenario_05.json
src/evaluation/scenario_node/src/: scenario_node.py
src/evaluation/scenario_runner_server/carla_ros_scenario_runner_types/: CMakeLists.txt  package.xml
src/evaluation/scenario_runner_server/carla_ros_scenario_runner_types/msg/: CarlaScenario.msg  EgoRoute.msg
src/evaluation/scenario_runner_server/carla_ros_scenario_runner_types/srv/: GetEgoVehicleRoute.srv  UpdateRenderMap.srv
tools/: plot_reward.py  test_env.py
(+844 files in other folders)
